--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.bg-gradient{
+  background: linear-gradient(90deg, #071837 0%, #1D4293 0%, #071837 100%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+
+.section {
+  @apply py-10 lg:py-24 px-5 
+}
+
+.blur-post{
+  background: #07183775;
+}
+
+.description:before{
+
+  position:absolute;
+  content:'';
+  top:0;
+  left:0;
+  height:100%;
+  width:2px;
+
 }
